# minimal_rust_os

./: Cargo.toml  contrib_setup.sh
.cargo/: config
src/: main.rs  vga_buffer.rs  vga_writer.rs
src/vga_writer/: vga_buffer.rs
