[package]
name = "rust_os"
version = "0.1.0"
authors = ["Dean Biskup <dean.biskup@citrix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.4"
volatile = "*"

[package.metadata.bootimage]
run-command = ["D:\\Program Files\\qemu\\qemu-system-x86_64.exe", "-drive", "format=raw,file={}"]