[package]
name = "rust_os"
version = "0.1.0"
authors = ["Dean Biskup <dean.biskup@citrix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.6"
spin = "0.5.0"
x86_64 = "0.7.0"

[dependencies.lazy_static]
version = "^1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
# uncomment the following line if running QEMU on Windows
# run-command = ["D:\\Program Files\\qemu\\qemu-system-x86_64.exe", "-drive", "format=raw,file={}"]

# uncomment the following line if running QEMU on Linux
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]

# tells bootimage to append this to qemu when in test/debug mode
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
